Fixed spacing on graphs and centered logo more accurately.

--- a/css/style.scss
+++ b/css/style.scss
@@ -8,10 +8,16 @@ body {
   margin: 3%;
 }
 
+p {
+  font-family: "Open Sans", sans-serif;
+}
 
 .slide-left {
   position: relative;
-  left: 48%;
+  left: 50%;
+  width: 50%;
+  margin-left: -45px !important;
+  padding-top: 30px !important;
   @extend %slide-left;
 }
 
@@ -24,8 +30,8 @@ h3 {
   letter-spacing: $slogan-spacing;
   line-height: 1.4;
   position: relative; 
-  margin-top: 6%;
-  margin-bottom: 0px !important;
+  padding-top: 30px !important;
+
 }
 
 /* Chrome, Safari, Opera */
@@ -37,9 +43,9 @@ circle {
 
 .element {
   position: absolute;
-  top: 20;
   left: 50%;
-  margin-left: -75px;
+  margin-left: -75px !important;
+  display: block;
   animation-name: appear;
   animation-duration: 1s;
 }
@@ -123,6 +129,42 @@ $color-green: #8fd38d;
 	}
 }
 
+$middle-foods: ("Sugar Cane" 1898),
+("Corn" 1017),
+("Rice" 738),
+("Wheat" 711),
+("Cow Milk" 635),
+("Potatoes" 374),
+("Vegetables" 279),
+("Soy Beans" 278),
+("Cassava" 263),
+("Sugar Beets" 247);
+
+$color-orange: #fcc1a1;
+$color-pink: #e1a1fc;
+$color-lime:#bcfca1 ;
+
+@each $food, $tons-produced in $middle-foods{
+	$i: index($middle-foods,($food $tons-produced));
+  rect.rect2:nth-child(#{$i + 1}) {
+		height: #{$tons-produced/5}px;
+    &:before {
+      content: $food;
+    }
+    &:after {
+      content: $tons-produced + "m";
+    }
+    @if($i % 3 == 0){
+  		background-color: fade-out($color-orange, $i*5/100);
+    }@else if($i % 3 == 1){
+      background-color: fade-out($color-pink, $i*5/100);
+    }@else if($i % 3 == 2){
+      background-color: fade-out($color-lime, $i*5/100);
+    }
+	}
+}
+
+
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
@@ -169,7 +211,7 @@ background-color: #e9f5dc;
 }
 
 .header-height{
-  height: 160px;
+  height: 200px;
 }
 
 .more-round-border{
